--- a/index.html
+++ b/index.html
@@ -6,15 +6,45 @@
 <title>Fixed Red Square</title>
 <script type="text/javascript" src="index.js"></script>
 <style>
-    .redSquare {
+    #canvas {
         position:absolute;
-        width: 100px;
-        height: 100px;
         background-color: red;
+    }
+    body{
+        overflow: hidden;
+    }
+    #cross {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    }
+
+    #cross:before,
+    #cross:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: red;
+    top: 50%;
+    left: 0;
+    }
+
+    #cross:before {
+    transform: translateY(-50%);
+    }
+
+    #cross:after {
+    transform: rotate(90deg) translateY(-50%);
     }
 </style>
 </head>
 <body>
-    <div id='square' class="redSquare"></div>
+    <canvas id="canvas"></canvas>
+    <div id="cross"></div>
 </body>
 </html>
+
